[package]
edition = "2021"
name = "ti_protocol"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = {version = "1.3.3"}
serde = {version = "1", features = ["derive"]}
ti_macro_derive = {path = "./ti_macro_derive"}